polish styles, set master as default branch on github

--- a/index.html
+++ b/index.html
@@ -11,21 +11,25 @@
 
 <body>
     <header>
-        <h1>Phone Number Generator</h1>
-        <div class="country-list">
+        <nav>
+            <h1 class="logo">
+                <a href="./">Phone Number Generator</a>
+            </h1>
+    
             <div class="country-list">
-                <a href="china-phone-number-generator">China</a>
-                <a href="india-phone-number-generator">India</a>
-                <a href="us-phone-number-generator">US</a>
-                <a href="indonesia-phone-number-generator">Indonesia</a>
-                <a href="brazil-phone-number-generator">Brazil</a>
-                <a href="pakistan-phone-number-generator">Pakistan</a>
-                <a href="nigeria-phone-number-generator">Nigeria</a>
-                <a href="bangladesh-phone-number-generator">Bangladesh</a>
-                <a href="russia-phone-number-generator">Russia</a>
-                <a href="japan-phone-number-generator">Japan</a>
+                <a class="curr" href="./">Home</a>
+                <a href="china-phone-number-generator.html">China</a>
+                <a href="india-phone-number-generator.html">India</a>
+                <a href="us-phone-number-generator.html">US</a>
+                <a href="indonesia-phone-number-generator.html">Indonesia</a>
+                <a href="brazil-phone-number-generator.html">Brazil</a>
+                <a href="pakistan-phone-number-generator.html">Pakistan</a>
+                <a href="nigeria-phone-number-generator.html">Nigeria</a>
+                <a href="bangladesh-phone-number-generator.html">Bangladesh</a>
+                <a href="russia-phone-number-generator.html">Russia</a>
+                <a href="japan-phone-number-generator.html">Japan</a>
             </div>
-        </div>
+        </nav>
     </header>
     <nav>
         <!-- 如有需要, 可以在这里加入导航栏内容 -->
@@ -34,7 +38,7 @@
         <section>
             <h2>China Phone Number Generator</h2>
             <p>Generate valid China phone numbers with our tool. Perfect for various applications and tests.</p>
-            <a href="china-phone-number-generator" title="Generate China Phone Number">
+            <a href="china-phone-number-generator.html" title="Generate China Phone Number">
                 <button>China Phone Number Generator</button>
             </a>
         </section>
@@ -111,8 +115,9 @@
             </a>
         </section>
     </main>
+    
     <footer>
-        <!-- 如有需要, 可以在这里加入页脚内容，例如版权声明、联系方式等 -->
+        Copyright 2024 &copy; <a href="./" style="color:#333;">Phone Number Generator</a>. All rights reserved.
     </footer>
 </body>
 
