--- a/china-phone-number-generator.html
+++ b/china-phone-number-generator.html
@@ -15,6 +15,11 @@
                 <a href="./" title="Phone Number Generator">Phone Number Generator</a>
             </h1>
     
+            <div class="language-list">
+                <a class="curr" href="./china-phone-number-generator.html" title="English">English</a>
+                <a href="./cn/china-phone-number-generator.html" title="中文">中文</a>
+            </div>
+
             <div class="country-list">
                 <a class="curr" href="./" title="Phone Number Generator">Home</a>
                 <a href="./china-phone-number-generator.html" title="China Phone Number Generator">China</a>
