--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
             <h1 class="logo">
                 <a href="./" title="Phone Number Generator">Phone Number Generator</a>
             </h1>
-    
+
+            <div class="language-list">
+                <a class="curr" href="./index.html" title="English">English</a>
+                <a href="./cn/index.html" title="中文">中文</a>
+            </div>
+
             <div class="country-list">
                 <a class="curr" href="./" title="Phone Number Generator">Home</a>
                 <a href="./china-phone-number-generator.html" title="China Phone Number Generator">China</a>
