--- a/china-phone-number-generator.html
+++ b/china-phone-number-generator.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <h1 class="logo">
-                <a href="./" title="Phone Number Generator">Phone Number Generator</a>
+                <a href="./index.html" title="Phone Number Generator">Phone Number Generator</a>
             </h1>
     
             <div class="language-list">
@@ -21,7 +21,7 @@
             </div>
 
             <div class="country-list">
-                <a class="curr" href="./" title="Phone Number Generator">Home</a>
+                <a class="curr" href="./index.html" title="Phone Number Generator">Home</a>
                 <a href="./china-phone-number-generator.html" title="China Phone Number Generator">China</a>
                 <a href="./india-phone-number-generator.html" title="India Phone Number Generator">India</a>
                 <a href="./us-phone-number-generator.html" title="US Phone Number Generator">US</a>
@@ -74,7 +74,7 @@
     </main>
     
     <footer>
-        Copyright 2024 &copy; <a href="./" style="color:#333;">Phone Number Generator</a>. All rights reserved.
+        Copyright 2024 &copy; <a href="./index.html" style="color:#333;">Phone Number Generator</a>. All rights reserved.
     </footer>
 
     <script>
