--- a/china-phone-number-generator.html
+++ b/china-phone-number-generator.html
@@ -77,6 +77,18 @@
         Copyright 2024 &copy; <a href="./index.html" style="color:#333;">Phone Number Generator</a>. All rights reserved.
     </footer>
 
+    <!-- Google tag (gtag.js) -->
+    <div style="display:none">
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-G52G1YNPFX"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-G52G1YNPFX');
+        </script>
+    </div>
+
     <script>
         document.getElementById('generateButton').addEventListener('click', function() {
             try {
