--- a/cn/china-phone-number-generator.html
+++ b/cn/china-phone-number-generator.html
@@ -79,6 +79,18 @@
         版权所有 2024 &copy; <a href="./index.html" style="color:#333;">电话号码生成器</a>。保留所有权利。
     </footer>
 
+    <!-- Google tag (gtag.js) -->
+    <div style="display:none">
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-G52G1YNPFX"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-G52G1YNPFX');
+        </script>
+    </div>
+    
     <script>
         document.getElementById('generateButton').addEventListener('click', function() {
             try {
